ha-proxy-installation/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: postgres-tcp-route
  namespace: default
spec:
  parentRefs:
    - name: ai-gateway-private
      # group: gateway.networking.k8s.io
      # kind: Gateway
      sectionName: pg-tcp-listener
  rules:
    - backendRefs:
        # - group: ''
          # kind: Service
        - name: ha-proxy-haproxy # Exact name of your HAProxy ClusterIP Service
          port: 80
